package es.uah.matcomp.mp.e1.ejerciciosclase.p4.Animal;

public abstract class Animal {
    private String name;

    public Animal(String name) {
        this.name = name;
    }
    public void greets(){}
}
